--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,6 @@ table {
 /* *******************************CODE STARTS HERE******************************* */
 
 body{
-	background-color: black;
+	background-color: rgb(110, 106, 106);
 	color:white
 }
