--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,36 @@ table {
 	max-width: 100%;
 }
 
+/* html{
+	text-align: center;
+} */
+
 body{
 	background-color: rgb(37, 37, 37);
 	color:white;
+}
+
+h1{
+	font-size: 3.052rem;
+}
+
+h2{
+	font-size: 2.441rem;
+}
+
+h3{
+	font-size: 1.953rem;
+}
+
+h4{
+	font-size: 1.563rem;
+}
+
+h5{
+	font-size: 1.25rem;
+}
+
+p, a{
+	font-size: 1rem;
+	line-height: 1.5;
 }
