--- a/src/index.css
+++ b/src/index.css
@@ -153,6 +153,10 @@ h2 {
   font-family: 'Bungee Shade', cursive;
 }
 
+h3, h4, h5, a, li, p{
+  font-family: 'EB Garamond', serif;
+}
+
 h3 {
   font-size: 1.953rem;
 }
